--- a/SapphireSelenium/src/com/test/sapphire_en.properties
+++ b/SapphireSelenium/src/com/test/sapphire_en.properties
@@ -4,3 +4,17 @@ admin=ADMIN
 systemsettings=System settings
 dbUrl =jdbc:mysql://192.168.1.14:3306/aers
 dbClass =com.mysql.jdbc.Driver
+home=HOME
+workspace=WORKSPACE
+inbox=INBOX
+portfolio=MASTERS
+reports=REPORTS
+tools=TOOLS
+admin=ADMIN
+dossier=Dossier
+masterOverview=Overview
+masterSetup=Setup
+masterActions=Actions
+masterSignals=Signals
+topicSummary=Topics
+masterMinutes=Minutes
